2002-04-19  jacob berkman  <jacob@ximian.com>

	* metal_style.c (get_tab_status): cleanup a little to really fix
	
	* metal_style.c (get_tab_status): assign a variable before we use
	it

Sat Jan 19 20:56:26 2002  Owen Taylor  <otaylor@redhat.com>

	* *.[ch]: Rework using code from Raleigh and the capabilities
	of GTK+-2.0. Move code around. 

2000-02-13  Tor Lillqvist  <tml@iki.fi>

	* metal_theme_main.c: No need to include gdkx.h.

Fri Jun 11 Peter Wainwright <prw@wainpr.demon.co.uk>
       * metal_theme_main.c: Make sure event handlers are restored
       on theme_exit().

Wed Feb 24 20:11:50 1999  Tor Lillqvist  <tml@iki.fi>

	* metal_theme_draw.c: Declare fuzzy_match before use. Make it
 	static.

Thu Feb 11 22:36:38 1999  Owen Taylor  <otaylor@redhat.com>

	* metal_theme_draw.c (draw_box): Draw some box
	if widget == NULL.

	* metal_theme_draw.c (draw_shadow): Fix handling
	of frames with SHADOW_NONE;

	* Theme/gtk/gtkrc: Remove cruft, introduce separate
	 style for scrollbars with thickness = 1.

	* metal_theme_main.c metal_theme_draw.c: Remove
	 hack to set border thickness by introducing
	 a thickness parameter.

Wed Dec 16 11:51:19 1998  Owen Taylor  <otaylor@redhat.com>

	* metal_theme_main.c: Removed C++ comments.

Tue Dec 15 23:42:52 1998  Owen Taylor  <otaylor@redhat.com>

	* metal_theme_draw.c metal_theme_main.h metal_theme.h: 
	Integrated in changes newer version from Randy Gordon (v 0.9).
	Much spiffier scrollbars, and ranges.

1998-11-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* metal_theme_draw.c: #include <math.h>
	(draw_check): Remove a couple of unused variables.

1998-11-07  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in: Removed.

Fri Nov  6 11:20:21 1998  Owen Taylor  <otaylor@redhat.com>

	* metal_theme_draw.c: Changed gap_side to GtkPositionType,
	removed draw_entry.

Sat Oct 17 00:06:51 1998  Owen Taylor  <otaylor@redhat.com>

	* metal_theme_draw.c (draw_shadow): Don't set GC's
	for SHADOW_NONE.
